fix: Object 를 dto 수정